...
        items: [
          BottomNavigationBarItem(
            icon: Semantics(
              identifier: 'main_tab.home',
              child: const Icon(Icons.home),
            ),
            label: 'Home',
          ),
          BottomNavigationBarItem(
            icon: Semantics(
              identifier: 'main_tab.user',
              child: const Icon(Icons.person),
            ),
            label: 'User',
          ),
        ],
      ),
...
