appId: com.example.basic_demo.dev
---
- launchApp
- assertVisible: "Home"
- tapOn:
    id: "main_tab.user"
- assertVisible: "User Info"
- assertVisible:
    id: "user.page"
- assertVisible:
    id: "user.name"
- assertVisible:
    id: "user.email"
- tapOn:
    id: "user.load_user_2"
- extendedWaitUntil:
    visible: "Name: Jane Smith"
    timeout: 10000
- assertVisible: "Email: jane.smith@example.com"
- tapOn:
    id: "user.load_user_3"
- extendedWaitUntil:
    visible: "Name: 张三"
    timeout: 10000
- assertVisible: "Email: zhangsan@example.com"
